--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -28,7 +28,7 @@
                 <h1>相似轨迹查询</h1>
                 <div class="row">
                     <div class="col-md-4">
-                        <button class="btn" @click="drawPolyline" style="margin: 5px">开始绘制</button>
+                        <button class="btn" @click="drawPolyline()" style="margin: 5px">开始绘制</button>
                     </div>
                     <div class="col-md-4">
                         <button class="btn" @click="clearDrawTraj" style="margin: 5px">关闭绘制</button>
@@ -46,15 +46,16 @@
                     <div class="col-md-4">
                         <button class="btn btn-success" @click="query()" style="margin: 5px">查询相似轨迹</button>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-5">
                         <select class="form-control" id="type_select" style="margin: 5px">
-                            <option value="0">高效</option>
-                            <option value="1">edr</option>
-                            <option value="2">erp</option>
-                            <option value="3">lcss</option>
-                            <option value="4">frechet</option>
-                            <option value="5">hausdorff</option>
-                            <option value="6">dtw</option>
+                            <option value="efficient">高效</option>
+                            <option value="edr">edr</option>
+                            <option value="erp">erp</option>
+                            <option value="lcss">lcss</option>
+                            <option value="frechet">frechet</option>
+                            <option value="discret_frechet">discret_frechet</option>
+                            <option value="hausdorff">hausdorff</option>
+                            <option value="sspd">sspd</option>
                         </select>
                     </div>
                 </div>
