--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,7 +10,7 @@
     <!-- import Vue -->
     <script src="https://unpkg.com/vue@2.6.12/dist/vue.js"></script>
     <!--引入高德-->
-    <script src='https://webapi.amap.com/maps?v=2.0&key=40e1b1b390aec4f92032a58a9cde83ae&plugin=AMap.MouseTool'></script>
+    <script src='https://webapi.amap.com/maps?v=2.0&key=40e1b1b390aec4f92032a58a9cde83ae&plugin=AMap.RangingTool'></script>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"-->
     <!--          integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">-->
@@ -27,67 +27,95 @@
 <body>
 <div id="app">
     <el-row>
-        <el-col :span="6" style="marigin: 20px #000fff;">
+        <el-col :span="7" style="marigin: 20px #000fff;">
             <h1>相似轨迹查询</h1>
-            <el-row>
-                <el-col :span="8">
-                    <el-button class="btn" @click="drawPolyline()" style="margin: 5px">开始绘制</el-button>
-                </el-col>
-                <el-col :span="8">
-                    <el-button class="btn" @click="clearDrawTraj" style="margin: 5px">关闭绘制</el-button>
-                </el-col>
-            </el-row>
-            <el-row>
-                <el-col :span="8">
-                    <el-button class="btn btn-success" @click="query()" style="margin: 5px">查询相似轨迹</el-button>
-                </el-col>
-                <el-col :span="10">
-                    <template>
-                        <el-select v-model="value" id="type_select" placeholder="请选择">
-                            <el-option
-                                    v-for="item in select_options"
-                                    :key="item.value"
-                                    :label="item.label"
-                                    :value="item.value">
-                            </el-option>
-                        </el-select>
-                    </template>
-                </el-col>
-            </el-row>
-            <h3>查询结果</h3>
-            <template>
-                <el-table
-                        :data="result_trajs"
-                        stripe
-                        v-loading="loading"
-                        style="width: 100%">
-                    <el-table-column
-                            prop="id"
-                            label="id"
-                            width="80">
-                    </el-table-column>
-                    <el-table-column
-                            prop="sim"
-                            label="sim"
-                            width="200">
-                    </el-table-column>
-                    <el-table-column
-                            prop="length"
-                            label="length"
-                            width="100">
-                    </el-table-column>
-                    <el-table-column label="操作">
-                        <template slot-scope="scope">
-                            <el-button
-                                    size="mini"
-                                    @click="handleHighlight(scope.$index, scope.row)">强调
-                            </el-button>
-                        </template>
-                    </el-table-column>
-                </el-table>
-            </template>
+            <el-collapse v-model="activeNames" accordion>
+                <el-collapse-item title="绘制轨迹" name="1">
+                    <el-row>
+                        <el-col :span="8">
+                            <el-button class="btn" @click="startDrawTraj">开始绘制轨迹</el-button>
+                        </el-col>
+                        <el-col :span="8">
+                            <el-button class="btn" @click="clearDrawTraj">清除当前绘制</el-button>
+                        </el-col>
+                        <el-col :span="8">
+                            <el-button class="btn" @click="toStepTwo">确定轨迹</el-button>
+                        </el-col>
+                    </el-row>
+                    <el-row v-show='query_trajectory!=null'>
+                        <el-col :span="22">
+                            <el-descriptions title="Query轨迹信息" :column="2" border>
+                                <el-descriptions-item label="起点坐标">{{query_trajectory_info.start_coord}}
+                                </el-descriptions-item>
+                                <el-descriptions-item label="终点坐标">{{query_trajectory_info.end_coord}}
+                                </el-descriptions-item>
+                                <el-descriptions-item label="轨迹点数量">{{query_trajectory_info.length}}
+                                </el-descriptions-item>
+                                <el-descriptions-item label="长度">{{query_trajectory_info.distance}}
+                                </el-descriptions-item>
+                            </el-descriptions>
+                        </el-col>
+                    </el-row>
+                </el-collapse-item>
+                <el-collapse-item title="设置条件" name="2">
+                    <el-form ref="query_form" :model="query_form" label-width="80px">
+                        <el-form-item label="检索方式">
+                            <el-select v-model="query_form.query_type" placeholder="请选择检索方式">
+                                <el-option
+                                        v-for="item in select_options"
+                                        :key="item.value"
+                                        :label="item.label"
+                                        :value="item.value">
+                                </el-option>
+                            </el-select>
+                        </el-form-item>
+                        <el-form-item label="查询个数">
+                            <el-col :span="20">
+                                <el-slider v-model="query_form.query_k" show-input :min="5" :max="50"></el-slider>
+                            </el-col>
+                        </el-form-item>
+                        <el-form-item label="时间限制">
+                            <el-switch v-model="query_form.time_range_on"></el-switch>
+                        </el-form-item>
+                        <el-form-item label="时间范围" v-show='query_form.time_range_on'>
+                            <el-time-picker
+                                    is-range
+                                    v-model="query_form.time_range"
+                                    range-separator="至"
+                                    start-placeholder="开始时间"
+                                    end-placeholder="结束时间"
+                                    placeholder="选择时间范围">
+                            </el-time-picker>
+                        </el-form-item>
+                        <el-form-item>
+                            <el-button class="primary" @click="query">查询</el-button>
+                        </el-form-item>
+                    </el-form>
+                </el-collapse-item>
+                <el-collapse-item title="获取结果" name="3">
+                    <el-descriptions data="result_info" :column="2" border>
+                        <el-descriptions-item label="计算用时">{{response_info.compute_time}}</el-descriptions-item>
+                        <el-descriptions-item label="总用时">{{response_info.query_time}}</el-descriptions-item>
+                        <el-descriptions-item label="检索数量">{{response_info.compute_count}}</el-descriptions-item>
+                        <el-descriptions-item label="检索模式">{{response_info.query_type}}</el-descriptions-item>
+                    </el-descriptions>
+                    <el-table
+                            :data="result_trajectories_table"
+                            stripe
+                            v-loading="loading"
+                            :row-class-name="tableRowClassName"
+                            @cell-click="cellClick"
+                            style="width: 100%">
+                        <el-table-column prop="id" label="ID"></el-table-column>
+                        <el-table-column prop="start_time" label="开始时间"></el-table-column>
+                        <el-table-column prop="end_time" label="结束时间"></el-table-column>
+                        <el-table-column prop="length" label="长度"></el-table-column>
+                        <el-table-column prop="sim" label="相似度"></el-table-column>
+                    </el-table>
+                </el-collapse-item>
+            </el-collapse>
         </el-col>
-        <el-col :span="18">
+        <el-col :span="17">
             <div id="container" style="height:960px;"></div>
         </el-col>
     </el-row>
