--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,7 +10,7 @@
     <!-- import Vue -->
     <script src="https://unpkg.com/vue@2.6.12/dist/vue.js"></script>
     <!--引入高德-->
-    <script src='https://webapi.amap.com/maps?v=2.0&key=40e1b1b390aec4f92032a58a9cde83ae&plugin=AMap.RangingTool'></script>
+    <script src='https://webapi.amap.com/maps?v=2.0&key=这里替换为你的高德开发者Key&plugin=AMap.RangingTool'></script>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"-->
     <!--          integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">-->
